--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="icon" href="./christmas-tree-gifts.png" type="image/png">
-    <title>New Year's Advent calendar</title>
+    <link rel="icon" href="./favicon.png" type="image/png">
+    <title>Календарь событий</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
